2012-07-28  Peter Kasting  <pkasting@google.com>

        Try disabling different test in hopes of tracking down the real problem.
        https://bugs.webkit.org/show_bug.cgi?id=92318 

        Unreviewed, making bots happier.

        * tests/WebViewTest.cpp:

2012-07-27  Peter Kasting  <pkasting@google.com>

        Disable failing test.
        https://bugs.webkit.org/show_bug.cgi?id=92318 

        Unreviewed, making bots happier.

        * tests/WebViewTest.cpp:

2012-07-27  Scott Graham  <scottmg@chromium.org>

        Change navigator.webkitGamepads[] to navigator.webkitGetGamepads()
        https://bugs.webkit.org/show_bug.cgi?id=92533

        Reviewed by Adam Barth.

        Renames for updated access point.

        * src/WebRuntimeFeatures.cpp:
        (WebKit::WebRuntimeFeatures::enableGamepad):
        (WebKit::WebRuntimeFeatures::isGamepadEnabled):

2012-07-27  Kevin Ellis  <kevers@chromium.org>

        [chromium] Calendar for input type=date should be larger on devices that support touch input.
        https://bugs.webkit.org/show_bug.cgi?id=92424

        Reviewed by Kent Tamura.

        Plumbs the deviceSupportsTouch setting through to the popup page so
        that the Calendar popup can be enlarged on screens that support touch
        input.

        * src/WebPagePopupImpl.cpp:
        (WebKit::WebPagePopupImpl::initPage):

2012-07-27  Peter Beverloo  <peter@chromium.org>

        Unreviewed.  Rolled DEPS.

        * DEPS:

2012-07-27  Oli Lan  <olilan@chromium.org>

        [chromium] Fix issues in visiblePositionForWindowPoint (offscreen points / iframes).
        https://bugs.webkit.org/show_bug.cgi?id=79117

        Fix two issues in WebFrameImpl::visiblePositionForWindowPoint.

        1) If the point is off-screen, the visiblePosition is clipped to the screen.
           - The fix is to add HitTestRequest::IgnoreClipping.

        2) The result is incorrect if the point is within an iframe.