@@ -242,8 +242,7 @@ TEST_F(WebViewTest, AutoResizeHeightOverflowAndFixedWidth)
                    expectedWidth, expectedHeight, NoHorizontalScrollbar, VisibleVerticalScrollbar);
 }
 
-// Disabled for https://bugs.webkit.org/show_bug.cgi?id=92318
-TEST_F(WebViewTest, DISABLED_AutoResizeFixedHeightAndWidthOverflow)
+TEST_F(WebViewTest, AutoResizeFixedHeightAndWidthOverflow)
 {
     WebSize minAutoResize(90, 100);
     WebSize maxAutoResize(200, 100);
@@ -255,7 +254,9 @@ TEST_F(WebViewTest, DISABLED_AutoResizeFixedHeightAndWidthOverflow)
                    expectedWidth, expectedHeight, VisibleHorizontalScrollbar, NoVerticalScrollbar);
 }
 
-TEST_F(WebViewTest, AutoResizeInBetweenSizes)
+// Next three tests disabled for https://bugs.webkit.org/show_bug.cgi?id=92318 .
+// It seems we can run three AutoResize tests, then the next one breaks.
+TEST_F(WebViewTest, DISABLED_AutoResizeInBetweenSizes)
 {
     WebSize minAutoResize(90, 95);
     WebSize maxAutoResize(200, 300);
@@ -267,7 +268,7 @@ TEST_F(WebViewTest, AutoResizeInBetweenSizes)
                    expectedWidth, expectedHeight, NoHorizontalScrollbar, NoVerticalScrollbar);
 }
 
-TEST_F(WebViewTest, AutoResizeOverflowSizes)
+TEST_F(WebViewTest, DISABLED_AutoResizeOverflowSizes)
 {
     WebSize minAutoResize(90, 95);
     WebSize maxAutoResize(200, 300);
@@ -279,7 +280,7 @@ TEST_F(WebViewTest, AutoResizeOverflowSizes)
                    expectedWidth, expectedHeight, VisibleHorizontalScrollbar, VisibleVerticalScrollbar);
 }
 
-TEST_F(WebViewTest, AutoResizeMaxSize)
+TEST_F(WebViewTest, DISABLED_AutoResizeMaxSize)
 {
     WebSize minAutoResize(90, 95);
     WebSize maxAutoResize(200, 300);
