@@ -1,5 +1,14 @@
 2012-07-28  Peter Kasting  <pkasting@google.com>
 
+        Sigh.  Just disable all the AutoResize tests after the first three.
+        https://bugs.webkit.org/show_bug.cgi?id=92318 
+
+        Unreviewed, making bots happier.
+
+        * tests/WebViewTest.cpp:
+
+2012-07-28  Peter Kasting  <pkasting@google.com>
+
         Try disabling different test in hopes of tracking down the real problem.
         https://bugs.webkit.org/show_bug.cgi?id=92318 
 
